--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .my-app.v-application .primary--text {
   color: white !important;
 }
 .main {
   background-color: #232c32;
+}
+.active_list .v-list-group .v-list-item--active {
+  color: #f4f4f4 !important;
+}
+.primary-text {
+  color: #f4f4f4;
 }
